tests/ui/improper-joint-eq.stderr
error: expected `=`
 --> tests/ui/improper-joint-eq.rs:3:15
  |
3 | #[efg(feature => "std")]
  |               ^^
