tests/ui/improper-joint-eq.rs
use efg::efg;

#[efg(feature => "std")]
struct S;

fn main() {}
